--- a/kidkinder.css
+++ b/kidkinder.css
@@ -1308,6 +1308,7 @@ body {
   .services .service-card {
     width: 100%;
     flex-direction: column;
+    align-items: center;
   }
   .end .end-one {
     width: 100%;
@@ -1331,6 +1332,7 @@ body {
 @media (max-width: 316px) {
   .services .service-card {
     flex-direction: column;
+    align-items: center;
     gap: 20px;
     width: 100%;
   }
@@ -1364,6 +1366,6 @@ body {
 }
 @media (max-width: 498px) {
   .contacts h1 {
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
 }/*# sourceMappingURL=kidkinder.css.map */
