--- a/kidkinder.css
+++ b/kidkinder.css
@@ -664,17 +664,19 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 5px;
+  gap: 7px;
   padding: 10px 4px;
   background-color: var(--color-5);
   border-radius: 0 0 5px 5px;
 }
 .blog .blog-cards .blog-card .blog-card-one h1 {
   font-size: 1.5rem;
+  text-align: center;
 }
 .blog .blog-cards .blog-card .blog-card-one p {
   font-size: 0.9rem;
   align-items: center;
+  text-align: center;
 }
 .blog .blog-cards .blog-card .blog-card-one .blog-comments {
   display: flex;
